# compiler-scheduler-env

./: CompilerSchedulerSlides.pptx  README.md  README_final.md  blog.md  fusionops_blog (1).md  fusionops_env.py  inference.py  openenv.yaml  pyproject.toml
Training scripts/: env1_v1.ipynb  env1_v2.ipynb  env1_v3.ipynb  env2_v1.ipynb  env2_v2.ipynb
server/: app.py
src/: __init__.py  cost_model.py  environment.py  graph_gen.py  models.py
tests/: test_verify.py
