[project]
name = "fusionops"
version = "2.0.0"
description = "RL environment for ML computation graph scheduling"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
server = "server.app:main"
